instructions.Instructions.scala.error
Erreur de compilation :
Instructions:11: error: not found: value leverBrosse
leverBrosse()
^